07-session-ingress/secure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-nginx-ingress
  labels:
    app: nginx
    criticity: high
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cert"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myingress.lcf.io
    secretName: myingress-lcf-io
  rules:
  - host: myingress.lcf.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                name: 80
